feat: Unified world elements