@@ -1,11 +1,10 @@
 package com.caosmos.world.application.usecases;
 
-import com.caosmos.common.domain.model.world.WorldEntity;
+import com.caosmos.common.domain.model.world.WorldElement;
 import com.caosmos.world.application.dto.WorldEntitySummaryDTO;
 import com.caosmos.world.domain.service.SpatialHash;
 import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
@@ -15,14 +14,8 @@ public class GetWorldEntitiesUseCase {
 
   private final SpatialHash spatialHash;
 
-  public List<WorldEntitySummaryDTO> executeSummary(
-      Double minX,
-      Double minZ,
-      Double maxX,
-      Double maxZ,
-      String type
-  ) {
-    Collection<WorldEntity> entities = getFilteredEntities(minX, minZ, maxX, maxZ, type);
+  public List<WorldEntitySummaryDTO> executeSummary(Double minX, Double minZ, Double maxX, Double maxZ, String type) {
+    Collection<WorldElement> entities = getFilteredEntities(minX, minZ, maxX, maxZ, type);
 
     return entities.stream()
         .map(e -> new WorldEntitySummaryDTO(
@@ -33,11 +26,17 @@ public class GetWorldEntitiesUseCase {
             e.getPosition().y(),
             e.getPosition().z()
         ))
-        .collect(Collectors.toList());
+        .toList();
   }
 
-  private Collection<WorldEntity> getFilteredEntities(Double minX, Double minZ, Double maxX, Double maxZ, String type) {
-    Collection<WorldEntity> entities;
+  private Collection<WorldElement> getFilteredEntities(
+      Double minX,
+      Double minZ,
+      Double maxX,
+      Double maxZ,
+      String type
+  ) {
+    Collection<WorldElement> entities;
     if (minX != null && minZ != null && maxX != null && maxZ != null) {
       entities = spatialHash.getEntitiesInBoundingBox(minX, minZ, maxX, maxZ);
     } else {
